Reduce config table reads with cached site configuration